--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">MemoApp</string>
     <string name="action_settings">Settings</string>
+
+    <string name="str_add_picture">사진 추가</string>
+    <string name="str_btn_save">저장</string>
+    <string name="str_btn_cancel">취소</string>
 </resources>
